[#154923105] Fixed an issue with scroll on mobile of notes list.

--- a/reactjs/components/organisms/Templates/Notebook/_style.scss
+++ b/reactjs/components/organisms/Templates/Notebook/_style.scss
@@ -10,6 +10,7 @@
     position: fixed;
     z-index: 1010;
     transition: .2s all;
+    overflow-y: scroll;
     @include media-breakpoint-up(md) {
       top: 80px;
       width: 33%;
